--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,37 @@
 
-/* 
+.container{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    height: 400px;
+}
+.structure{
+    background: black;
+    width: 200px;
+    border: 3px solid black;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.circle{
+    width: 100px;
+    height: 100px;
+    border-radius: 100px;
+    border: none;
+}
+.Red{
+    background: red;
+    
+}
+.Yellow{
+    background: yellow;
+}
+.Green{
+    background: green;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+.highlighted {
+    box-shadow: 0 0 70px lightgoldenrodyellow;
+  }
